[gd_scene load_steps=2 format=3 uid="uid://settings_scene"]

[ext_resource type="Script" path="res://Settings.gd" id="1_settings"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -300.0
offset_right = 150.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "SETTINGS"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="FPSLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 30.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 20
text = "FPS Limit:"

[node name="FPSOption" type="OptionButton" parent="Panel"]
layout_mode = 1
offset_left = 250.0
offset_top = 30.0
offset_right = 450.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 18
item_count = 4
selected = 0
popup/item_0/text = "Unlimited"
popup/item_0/id = 0
popup/item_1/text = "60 FPS"
popup/item_1/id = 1
popup/item_2/text = "120 FPS"
popup/item_2/id = 2
popup/item_3/text = "144 FPS"
popup/item_3/id = 3

[node name="VSyncLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 30.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 20
text = "VSync:"

[node name="VSyncCheck" type="CheckBox" parent="Panel"]
layout_mode = 1
offset_left = 250.0
offset_top = 80.0
offset_right = 350.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 18
button_pressed = true

[node name="GraphicsLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 30.0
offset_top = 130.0
offset_right = 200.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 20
text = "Graphics:"

[node name="GraphicsOption" type="OptionButton" parent="Panel"]
layout_mode = 1
offset_left = 250.0
offset_top = 130.0
offset_right = 450.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 18
item_count = 4
selected = 2
popup/item_0/text = "Low"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2
popup/item_3/text = "Ultra"
popup/item_3/id = 3

[node name="MusicLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 30.0
offset_top = 190.0
offset_right = 200.0
offset_bottom = 220.0
theme_override_font_sizes/font_size = 20
text = "Music Volume:"

[node name="MusicSlider" type="HSlider" parent="Panel"]
layout_mode = 1
offset_left = 250.0
offset_top = 190.0
offset_right = 550.0
offset_bottom = 220.0
max_value = 100.0
value = 80.0

[node name="SFXLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 30.0
offset_top = 240.0
offset_right = 200.0
offset_bottom = 270.0
theme_override_font_sizes/font_size = 20
text = "SFX Volume:"

[node name="SFXSlider" type="HSlider" parent="Panel"]
layout_mode = 1
offset_left = 250.0
offset_top = 240.0
offset_right = 550.0
offset_bottom = 270.0
max_value = 100.0
value = 80.0

[node name="FullscreenLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 30.0
offset_top = 290.0
offset_right = 200.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 20
text = "Fullscreen:"

[node name="FullscreenCheck" type="CheckBox" parent="Panel"]
layout_mode = 1
offset_left = 250.0
offset_top = 290.0
offset_right = 350.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 18

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "← BACK"

[node name="InfoLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -120.0
offset_right = 250.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 14
text = "Press F11 for fullscreen • Settings save automatically"
horizontal_alignment = 1

[connection signal="item_selected" from="Panel/FPSOption" to="." method="_on_fps_option_item_selected"]
[connection signal="toggled" from="Panel/VSyncCheck" to="." method="_on_vsync_check_toggled"]
[connection signal="item_selected" from="Panel/GraphicsOption" to="." method="_on_graphics_option_item_selected"]
[connection signal="value_changed" from="Panel/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Panel/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="toggled" from="Panel/FullscreenCheck" to="." method="_on_fullscreen_check_toggled"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
